[project]
name = "orbiter-crypto"
version = "0.2.0"
description = "Lightweight crypto portfolio optimizer. Efficient frontier, HRP, Risk Parity — with real risk metrics and interactive charts."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{ name = "Brian Borghei", email = "borghei.mohammadamin@gmail.com" }]
keywords = ["crypto", "portfolio", "optimization", "finance", "risk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "ccxt>=4.0",
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.scripts]
orbiter = "orbiter.cli:cli"

[project.urls]
Homepage = "https://github.com/borghei/orbiter"
Repository = "https://github.com/borghei/orbiter"
Issues = "https://github.com/borghei/orbiter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbiter"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
